--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,7 @@ docker_build_push:
     - export DOCKER_CLI_EXPERIMENTAL=enabled
     - echo ${DOCKERHUB_PASSWORD} | docker login -u ${DOCKERHUB_USER} --password-stdin
     - docker buildx build -t ${DOCKERHUB}/${CI_PROJECT_NAME}:latest -t ${DOCKERHUB}/${CI_PROJECT_NAME}:${VERSION} --platform=linux/arm,linux/arm64,linux/amd64 . --push
+    - docker pushrm ${DOCKERHUB}/${CI_PROJECT_NAME}
   only:
     refs:
       - master
