--- a/pterodactyl/Dockerfile
+++ b/pterodactyl/Dockerfile
@@ -3,9 +3,9 @@
 # Environment: glibc + libuuid
 # Minimum Panel Version: 0.6.0
 # ----------------------------------
-FROM frolvlad/alpine-glibc
+FROM frolvlad/alpine-glibc:alpine-3.12
 
-LABEL maintainer='NoxInmortus (IMPERIUM)'
+LABEL maintainer='NoxInmortus'
 
 RUN apk add --update --no-cache wget ca-certificates libstdc++ musl libuuid \
   && adduser -D -h /home/container container
